# fold

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codecov.yml  test.yml  wheels.yml
docs/assets/css/: custom.css  extra.css  termynal.css
docs/overrides/: main.html
docs/scripts/: gen_ref_pages.py
examples/: example_base_model.py  example_calendar_quarter_split.py  example_calendar_split.py  example_calendar_year_split.py  example_cross_val_score.py  example_expanding_n_split.py  example_expanding_split.py  example_function_split.py  example_grouper_split.py  example_integration.py  example_interval_split.py  example_period_split.py  example_purged_kfold.py  example_purged_split.py  example_purged_wf_split.py  example_random_n_split.py  example_readme.py  example_rolling_n_split.py  example_rolling_opt_split.py  example_rolling_split.py  example_single_split.py  example_train_test_split.py
fold/: __init__.py  integration.py
fold/model_selection/: __init__.py  base.py  config.py  coverage.py  duration.py  plots.py
fold/model_selection/models/: calendar_split.py  expanding_n_split.py  expanding_split.py  function_split.py  grouper_split.py  interval_split.py  period_split.py  purged_kfold_cv.py  purged_kfold_split.py  purged_split.py  purged_walk_forward_cv.py  purged_walk_forward_split.py  random_n_split.py  rolling_n_split.py  rolling_optimize_split.py  (+4 more)
fold/tools/: __init__.py  base.py  periods.py  selectors.py  utils.py
fold/utils/: checks.py  datetime.py  grouper.py  indexing.py  resampler.py
tests/: test_checks.py  test_datetime.py  test_grouping.py  test_indexing.py  test_integration.py  test_models.py  test_plots.py  test_tools.py
