[tool.poetry]
name = "python-fold"
version = "0.1.1"
description = "Time-series cross-validation on steroids. Multi-purpose. Fully compatible with scikit-learn."
authors = ["ActurialCapital"]
license = "BSD 3-Clause License"
readme = "README.md"
repository = "https://github.com/ActurialCapital/fold"
packages = [ {include = "fold"} ]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
numba = "^0.59.1"
dateparser = "^1.2.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
